Datos/Envios/218/error.txt
../Datos/Envios/218/PiezaPastelCompilationError.c: In function ‘main’:
../Datos/Envios/218/PiezaPastelCompilationError.c:3:13: error: ‘hola’ undeclared (first use in this function)
     int z = hola;
             ^~~~
../Datos/Envios/218/PiezaPastelCompilationError.c:3:13: note: each undeclared identifier is reported only once for each function it appears in
